# faker_education

./: README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-app.yml  python-package.yml
faker_education/: __init__.py  schools.py
faker_education/tests/: test_schools.py
