[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "faker_education"
author = "Matt Henry"
author-email = "matthttam8411@gmail.com"
home-page = "https://github.com/matthttam8411/faker_education.git"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]